# pokemon

./: .env.example  .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  README.md  RUN_WITH_VISUAL_STUDIO.md  leaderboard_stub.c  pokemon  pokemon.c  pokemon.h  pokemon.out
app/: .env.example  README.md  __init__.py  app.py  config.py  example_client.py  main.py  requirements.txt  schema.py  security.py
app/deploy/: Dockerfile  pokemon-llm-proxy.service
app/tests/: test_proxy.py  test_schema.py  test_security.py
battlelogic/: battlelogic.c  battlelogic.h
docs/: ascii-art-plan.md  proxy-protocol.md
dogam/: dogam.c  dogam.h
entry/: entry.c  entry.h
llm/: hmac_sha256.c  hmac_sha256.h  llm.c  llm.h  sha256.c  sha256.h
pokemon.dSYM/Contents/Resources/DWARF/: pokemon
pokemon.dSYM/Contents/Resources/Relocations/aarch64/: pokemon.yml
score/: ranking.txt  score.c  score.h
skill/: skill.c  skill.h
tools/ascii_converter/: README.md  convert_sprite.py  download_dots.py  download_sprites.py
tools/ascii_converter/output/: 001.blocks.txt  001.braille.txt  001.color-halfblocks.txt  001.halfblocks.txt  001.halfblocks.w64.txt  001.txt  002.txt  003.txt  004.txt  005.halfblocks.dark.w64.txt  005.txt  006.txt  007.txt  008.txt  009.txt  010.txt  011.txt  012.halfblocks.dark.w64.txt  012.txt  013.txt  014.halfblocks.dark.w64.txt  014.txt  015.txt  016.txt  017.halfblocks.dark.w64.txt  017.txt  018.txt  019.txt  020.txt  021.halfblocks.dark.w64.txt  021.txt  022.txt  023.txt  024.txt  025.blocks.txt  025.braille.txt  025.halfblocks.txt  025.halfblocks.w64.txt  025.txt  026.halfblocks.dark.w64.txt  (+138 more)
